--- a/FreeCrmTest/pom.xml
+++ b/FreeCrmTest/pom.xml
@@ -61,6 +61,13 @@
                  <artifactId>openxml4j</artifactId>
                  <version>1.0-beta</version>
           </dependency>
+          
+          <dependency>
+                 <groupId>mysql</groupId>
+                 <artifactId>mysql-connector-java</artifactId>
+                 <version>8.0.19</version>
+          </dependency>
+          
 
    
   </dependencies>
